--- a/files/addnewmember/styles.css
+++ b/files/addnewmember/styles.css
@@ -441,11 +441,11 @@
 #u33 {
   position:absolute;
   left:400px;
-  top:450px;
+  top:420px;
   width:100px;
   height:25px;
   white-space:nowrap;
-    font-family:'微软雅黑 Bold', '微软雅黑';
+  font-family:'微软雅黑 Bold', '微软雅黑';
   font-weight:700;
   font-style:normal;
   font-size:36px;
@@ -453,7 +453,7 @@
 #u34 {
   position:absolute;
   left:400px;
-  top:520px;
+  top:490px;
    width:300px;
   height:40px;
 }
@@ -487,7 +487,7 @@
 #u36 {
   position:absolute;
   left:400px;
-  top:600px;
+  top:540px;
   width:100px;
   height:25px;
   white-space:nowrap;
@@ -512,7 +512,7 @@
 #u38_select {
   position:absolute;
   left:400px;
-  top:670px;
+  top:610px;
   width:300px;
   height:40px;
   white-space:nowrap;
@@ -534,8 +534,8 @@
 
 #u38_button {
   position:absolute;
-  left:1000px;
-  top:675px;
+  left:970px;
+  top:1080px;
   width:100px;
   height:40px;
   font-family:'微软雅黑 Bold', '微软雅黑';
@@ -573,4 +573,88 @@
   width:315px;
   word-wrap:break-word;
 }
-
+#j1{
+  position:absolute;
+  left:400px;
+  top:660px;
+  width:100px;
+  height:25px;
+  white-space:nowrap;
+  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-weight:700;
+  font-style:normal;
+  font-size:36px;
+}
+#j2{
+  position:absolute;
+  left:400px;
+  top:780px;
+  width:100px;
+  height:25px;
+  white-space:nowrap;
+  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-weight:700;
+  font-style:normal;
+  font-size:36px;
+}
+#j3{
+  position:absolute;
+  left:400px;
+  top:900px;
+  width:100px;
+  height:25px;
+  white-space:nowrap;
+  font-family:'微软雅黑 Bold', '微软雅黑';
+  font-weight:700;
+  font-style:normal;
+  font-size:36px;
+}
+#admission_year{
+  position:absolute;
+  left:400px;
+  top:730px;
+  width:300px;
+  height:40px;
+  white-space:nowrap;
+  font-size:33px;
+  font-family:'Arial Normal', 'Arial';
+}
+#major{
+  position:absolute;
+  left:400px;
+  top:850px;
+  width:300px;
+  height:40px;
+  white-space:nowrap;
+  font-size:33px;
+  font-family:'Arial Normal', 'Arial';
+}
+#skill_div{
+  position:absolute;
+  left:400px;
+  top:950px;
+  float: left;
+  width: 800px;
+}
+.skill{  
+  width:160px;
+  height:40px;
+  margin-left: 5px;
+  margin-top:10px; 
+  position: relative;
+  float: left;
+  white-space:nowrap;
+  font-size:33px;
+  font-family:'Arial Normal', 'Arial';
+}
+#img_show{
+  position:absolute;
+  left:800px;
+  top:300px;
+  width:250px;
+  height:250px;
+}
+#img_show_img{
+  width: 100%;
+  height: 100%;
+}
