--- a/files/members/styles.css
+++ b/files/members/styles.css
@@ -370,10 +370,6 @@
    height: 200px;
    top:10px;
    left: 50px;
-    font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
-   font-style:normal;
-   font-size:20px;
-   color:#666666;
    display:block;
    overflow:hidden; 
    .-o-text-overflow:ellipsis;
@@ -420,4 +416,16 @@
   top:42px;
   width:96px;
   word-wrap:break-word;
+}
+.float_div{
+  position: relative;
+  float: left;
+  font-family: '汉仪细简黑简','汉仪细简黑简';
+  font-size: 18pt;
+  color: #666666;
+  background-color: #e0c246;
+  margin-left: 10px;
+  margin-top: 10px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
