--- a/files/newresearch/styles.css
+++ b/files/newresearch/styles.css
@@ -343,7 +343,7 @@ top:669px; */
   top:258px;
   width:198px;
   height:32px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:26px;
   text-align:center;
@@ -435,7 +435,7 @@ top:669px; */
   top:365px;
   width:109px;
   height:32px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:26px;
 }
@@ -485,7 +485,7 @@ top:669px; */
   top:421px;
   width:298px;
   height:32px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:26px;
 }
@@ -535,7 +535,7 @@ top:669px; */
   top:475px;
   width:109px;
   height:32px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:26px;
 }
@@ -585,7 +585,7 @@ top:669px; */
   top:530px;
   width:136px;
   height:32px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:26px;
 }
@@ -635,7 +635,7 @@ top:669px; */
   top:581px;
   width:190px;
   height:32px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:26px;
 }
@@ -945,7 +945,7 @@ top:669px; */
   z-index: 100;
   margin-left:38px; 
   margin-top:12px; 
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:26px;
   vertical-align: center;
@@ -972,7 +972,7 @@ top:669px; */
   margin-left: 64px;
 }
 #summary_div{
-   font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+   font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:20px;
   color: #666666;
@@ -1039,7 +1039,7 @@ top:669px; */
 }
 #content1_div{
   margin-top: 14px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:20px;
   color: #808080;
@@ -1054,7 +1054,7 @@ top:669px; */
 }
 #content2_div{
   margin-top: 14px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:20px;
   color: #808080;
@@ -1111,6 +1111,7 @@ padding-left: 160px;}
   height:16px;
   cursor: pointer;
   color:#cccccc;
+  font-size: 0px;
   margin-left: 5.5px;
   margin-right:5.5px;
 }
