--- a/files/news_detail/styles.css
+++ b/files/news_detail/styles.css
@@ -440,7 +440,7 @@
   position: absolute;
   top:125px;
   left: 68px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:20px;
   color: #666666;
