--- a/files/contact/styles.css
+++ b/files/contact/styles.css
@@ -267,7 +267,7 @@
   width:470px;
   height:144px;
   font-size:20px;
-  font-family:'汉仪细简黑简 Regular', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:20px;
 }
