--- a/files/intro/styles.css
+++ b/files/intro/styles.css
@@ -248,9 +248,9 @@
   top:178px;
   width:852px;
   height:105px;
-  font-family:'汉仪细简黑简 Bold', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
-  font-size:20pt;
+  font-size:20px;
   color:#CCCCCC;
 }
 #u18_img {
@@ -465,7 +465,7 @@
   top:71px;
   width:336px;
   height:39px;
-  font-family:'汉仪细简黑简 Regular', '汉仪细简黑简';
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-weight:400;
   font-style:normal;
   font-size:20px;
@@ -932,7 +932,7 @@
 #wmain{
   position:relative;
   left:51px;
-  width: 600px;
+  width: 1000px;
   top: 0px;
   overflow:hidden;
   text-overflow:ellipsis;
@@ -941,7 +941,7 @@
 #uwdiv {
   position:relative;
   width:196px;
-  height:108px;
+  height:138px;
   font-family:'微软雅黑 Bold', '微软雅黑';
   font-style:normal;
   color:#D8AF03;
@@ -954,14 +954,14 @@
 } 
 #uwt {
   position:relative;
-  width:196px;
+  width:400px;
   white-space:nowrap;
 }
 #uwc {
   position:relative;
   left:26px;
-  width:300px;
-  margin-top: 17px;
+  width:600px;
+  margin-top: 18px;
   text-align:left;
   display:block;
   white-space:nowrap;
@@ -971,9 +971,9 @@
 }
 #uwc_input {
   position:relative;
-  width:300px;
-  height:19px;
-  font-family:'汉仪细简黑简 Regular', '汉仪细简黑简';
+  width:600px;
+  height:29px;
+  font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:20px;
   color:#B3B3B3;
@@ -1310,10 +1310,10 @@ margin-left: 10px;
   font-size:40px;
 }
 #wtp1{
-  font-family:'微软雅黑 Bold', '微软雅黑';font-weight:700;font-size:40px;
+  font-family:'微软雅黑 Bold', '微软雅黑';font-size:40px;
 }
 #wtp2{
-  font-family:'微软雅黑 Regular', '微软雅黑';font-weight:400;font-size:30px;
+  font-family:'微软雅黑 Regular', '微软雅黑';font-size:30px;
 }
 #u48 {
   position:relative;
@@ -1345,14 +1345,16 @@ margin-left: 10px;
 .techniques_backimg{
   position: absolute;
   left: 63px;
-
+  border-radius:50%;
 }
 .techniques_img{
   position: absolute;
-  left: 63px;
-  top:36px;
-  width:150px;
-  height:90px;
+  left: 62px;
+/*   top:36px; */
+  width:153px;
+  height:153px;
+  border-radius:50%;
+
 }
 .techniques_title{
   position: absolute;
@@ -1370,13 +1372,13 @@ margin-left: 10px;
 .techniques_intro{
   position: absolute;
   left: 245px;
-  top:56px;
+  top:70px;
   width:200px;
-  height:40px;
   background-color:transparent;
   font-family:'汉仪细简黑简', '汉仪细简黑简';
   font-style:normal;
   font-size:20px;
+  font-weight: 400;
   text-decoration:none;
   color:#B3B3B3;
   text-align:left;
