--- a/files/members/styles.css
+++ b/files/members/styles.css
@@ -319,11 +319,11 @@
   height: 45px;
 }
 #head_name{
-  text-align:center;
+/*   text-align:center; */
   /* position: absolute; */
 /*    display:inline; */
   /* letter-spacing:5px; */
-  width:22%;
+/*   width:22%; */
   float:left;
   margin-right:2%;
   font-family:'微软雅黑 Regular', '微软雅黑';
@@ -421,7 +421,7 @@
   position: relative;
   float: left;
   font-family: '汉仪细简黑简','汉仪细简黑简';
-  font-size: 18pt;
+  font-size: 18px;
   color: #666666;
   background-color: #e0c246;
   margin-left: 10px;
