--- a/files/addnewmember/styles.css
+++ b/files/addnewmember/styles.css
@@ -83,7 +83,7 @@
   left:0px;
   top:155px;
   width:319px;
-  height:1000px;
+  height:1200px;
   background-color: #f2f2f2;
 }
 #u7_img {
@@ -106,7 +106,7 @@
   left:319px;
   top:155px;
   width:961px;
-  height:1000px;
+  height:1200px;
   background-color: #999999;
 }
 #u9_img {
@@ -534,8 +534,8 @@
 
 #u38_button {
   position:absolute;
-  left:970px;
-  top:1080px;
+  left:1000px;
+  top:1230px;
   width:100px;
   height:40px;
   font-family:'微软雅黑 Bold', '微软雅黑';
@@ -609,6 +609,16 @@
   font-style:normal;
   font-size:36px;
 }
+#role2{
+  position:absolute;
+  left:800px;
+  top:610px;
+  width:300px;
+  height:40px;
+  white-space:nowrap;
+  font-size:33px;
+  font-family:'Arial Normal', 'Arial';
+}
 #admission_year{
   position:absolute;
   left:400px;
@@ -637,9 +647,9 @@
   width: 800px;
 }
 .skill{  
-  width:160px;
+  width:350px;
   height:40px;
-  margin-left: 5px;
+  margin-right: 30px;
   margin-top:10px; 
   position: relative;
   float: left;
@@ -649,9 +659,9 @@
 }
 #img_show{
   position:absolute;
-  left:800px;
+  left:840px;
   top:300px;
-  width:250px;
+  width:218px;
   height:250px;
 }
 #img_show_img{
